# tjdft-api

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  TJDFT_CLIENT_MELHORIAS.md  alembic.ini  deploy-swarm.sh  docker-compose.dev.yml  docker-compose.swarm.yml  docker-compose.yml  llm.txt  nginx.conf.example  pyproject.toml  requirements-dev.txt  requirements.txt  test-pyramid-plan.md  tjdft-mcp-plan.md  vercel.json
.claude/: CLAUDE_TEMPLATES_VALIDATION.md  VALIDATION_SUMMARY.md  settings.json
.claude.backup-2026-03-03T19-37-52/: settings.local.json
.claude/skills/tjdft-api/: SKILL.md
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  doc-check.yml  prompt-eval.yml
.omc/: docs-style-guide.md  prd.json  progress.txt
.omc/plans/: autopilot-impl.md  create-llm-txt.md  open-questions.md  quick-wins-revised.md  tjdft-analytics-cli.md  tjdft-quick-wins-revised.md  update-all-documentation.md
.omc/sessions/: 43969c68-14c4-49ec-aef0-10f489496ceb.json  fa72d840-34fd-4776-abd7-76e18549f26a.json
.omc/state/: agent-replay-572e262a-482a-4af1-9315-7a52019aa211.jsonl  agent-replay-5870ac55-cba6-48e2-aae5-45a9932b4c01.jsonl  agent-replay-fa72d840-34fd-4776-abd7-76e18549f26a.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py  config.py  database.py  index.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/core/: sqlite_config.py
app/mcp/: __init__.py  __main__.py  constants.py  errors.py  formatters.py  runtime.py  schemas.py  server.py
app/mcp/tools/: __init__.py  ai_tools.py  history_tools.py  search_tools.py
app/models/: __init__.py  consulta.py  decisao.py
app/repositories/: __init__.py  base.py  consulta_repo.py  consulta_repository.py  decisao_repo.py  decisao_repository.py
app/schemas/: __init__.py  analise.py  consulta.py  decisao.py
app/services/: __init__.py  ai_service.py  busca_service.py  estatisticas_service.py  tjdft_client.py
app/utils/: __init__.py  cache.py  enrichment.py  filtros.py
data/: referencia.json
docs/: api.md  api_reference.md  e2e-test-plan.md  index.md  installation.md  testing-backend-strategy.md  testing-taxonomy.md  tjdft_api.md  tjdft_api_dictionary.json  tjdft_apis_completo.md  usage.md
docs/archive/: MANUAL_TESTING_GUIDE.md
docs/mcp/: configuration.md  contract.md  example.mcp.json  implementation.md  quickstart.md  tool_catalog.md
evals/: tjdft_mcp_evaluation.xml
scripts/: setup.sh  test.sh
tests/: conftest.py  test_main.py
tests/e2e/: __init__.py  conftest.py  test_busca_e2e.py  test_cache_e2e.py  test_database_e2e.py  test_sqlite_config_e2e.py
tests/e2e/fixtures/: __init__.py  tjdft_api.py
tests/performance/: __init__.py  test_cache_performance.py
tests/prompts/: .gitignore  README.md  promptfooconfig.yaml
tests/prompts/datasets/: comparar_cases.yaml  explicar_cases.yaml  resumo_cases.yaml
tests/test_api/: test_busca.py  test_test_infra.py
tests/test_config/: test_settings_env_example.py
tests/test_mcp/: test_ai_tools.py  test_formatters.py  test_history_tools.py  test_schemas.py  test_search_tools.py
tests/test_mcp_integration/: conftest.py  test_stdio_core.py
tests/test_repositories/: test_consulta_repo.py
tests/test_schemas/: test_consulta_schema.py  test_decisao_schema.py
tests/test_services/: test_ai_service.py  test_busca_service.py  test_estatisticas_service.py  test_tjdft_client.py
tests/test_utils/: test_cache.py  test_enrichment.py  test_filtros.py
(+9 files in other folders)
