[project]
name = "tjdft-api"
version = "0.1.0"
description = "API do Tribunal de Justiça do Distrito Federal e Territórios"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "mcp>=1.12.4",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.18.4",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "greenlet>=3.0.0",
    "httpx>=0.28.1",
    "openai>=1.12.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "testcontainers>=4.7.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --cov=app --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "unit: testes rápidos e isolados, sem banco real ou rede",
    "integration: testes com integração de banco ou múltiplas camadas locais",
    "api: testes de contrato HTTP e wiring da aplicação FastAPI",
    "e2e: end-to-end tests (requires Docker for PostgreSQL and Redis)",
    "slow: slow-running tests that may require external dependencies",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["redis"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "data*", "tests*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
